--- a/pages/docker-workshop-ja/01_overview.mdx
+++ b/pages/docker-workshop-ja/01_overview.mdx
@@ -30,4 +30,4 @@ A running container uses an isolated filesystem. This isolated filesystem is pro
 
 In this section, you learned about containers and images.
 
-Next, you'll containerize a simple application and get hands-on with the concepts.
+次に、シンプルなアプリケーションをコンテナ化し、これらの概念を実際に体験してみましょう。
