--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,11 +1,9 @@
-# Introduction
- 
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
+# Welcome
 
-## What is Nextra?
+This site is collections of documents created by tadashi0713(Tadashi Nemoto).
 
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
+Have a good read!
 
-## Documentation
+## Dockerワークショップ
 
-The documentation is available at [https://nextra.site](https://nextra.site).
+[Dockerドキュメント](https://docs.docker.com/get-started/workshop/) で提供されているワークショップを日本語訳したものです。
