--- a/pages/docker-workshop-ja/03_updating_app.mdx
+++ b/pages/docker-workshop-ja/03_updating_app.mdx
@@ -1,3 +1,5 @@
+import { Tabs } from 'nextra/components'
+
 In [part 2](./02_our_app.md), you containerized a todo application. In this part, you'll update the application and image. You'll also learn how to stop and remove a container.
 
 ## Update the source code
@@ -33,10 +35,62 @@ docker: Error response from daemon: driver failed programming external connectiv
 
 The error occurred because you aren't able to start the new container while your old container is still running. The reason is that the old container is already using the host's port 3000 and only one process on the machine (containers included) can listen to a specific port. To fix this, you need to remove the old container.
 
-import { Tabs } from 'nextra/components'
- 
-<Tabs items={['pnpm', 'npm', 'yarn']}>
-  <Tabs.Tab>**pnpm**: Fast, disk space efficient package manager.</Tabs.Tab>
-  <Tabs.Tab>**npm** is a package manager for the JavaScript programming language.</Tabs.Tab>
-  <Tabs.Tab>**Yarn** is a software packaging system.</Tabs.Tab>
+## Remove the old container
+
+To remove a container, you first need to stop it. Once it has stopped, you can remove it. You can remove the old container using the CLI or Docker Desktop's graphical interface. Choose the option that you're most comfortable with.
+
+<Tabs items={['CLI', 'Docker Desktop']}>
+  <Tabs.Tab>
+   ### Remove a container using the CLI
+
+   1. Get the ID of the container by using the `docker ps` command.
+
+      ```console
+      $ docker ps
+      ```
+
+   2. Use the `docker stop` command to stop the container. Replace `<the-container-id>` with the ID from `docker ps`.
+
+      ```console
+      $ docker stop <the-container-id>
+      ```
+
+   3. Once the container has stopped, you can remove it by using the `docker rm` command.
+
+      ```console
+      $ docker rm <the-container-id>
+      ```
+
+   >**Note**
+   >
+   >You can stop and remove a container in a single command by adding the `force` flag to the `docker rm` command. For example: `docker rm -f <the-container-id>`
+  </Tabs.Tab>
+  <Tabs.Tab>
+   ### Remove a container using Docker Desktop
+
+   1. Open Docker Desktop to the **Containers** view.
+   2. Select the trash can icon under the **Actions** column for the container that you want to delete.
+   3. In the confirmation dialog, select **Delete forever**.
+  </Tabs.Tab>
 </Tabs>
+
+### Start the updated app container
+
+1. Now, start your updated app using the `docker run` command.
+
+   ```console
+   $ docker run -dp 127.0.0.1:3000:3000 getting-started
+   ```
+
+2. Refresh your browser on [http://localhost:3000](http://localhost:3000) and you should see your updated help text.
+
+## Summary
+
+In this section, you learned how to update and rebuild a container, as well as how to stop and remove a container.
+
+Related information:
+ - [docker CLI reference](/reference/cli/docker/)
+
+## Next steps
+
+Next, you'll learn how to share images with others.
