--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,9 +1,9 @@
 # Welcome
 
-This site is collections of documents created by tadashi0713(Tadashi Nemoto).
+This site is collections of documents created by Tadashi Nemoto(tadashi0713).
 
 Have a good read!
 
-## Dockerワークショップ
+## [Dockerワークショップ](/docker-workshop-ja/01_overview)
 
 [Dockerドキュメント](https://docs.docker.com/get-started/workshop/) で提供されているワークショップを日本語訳したものです。
