--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -4,6 +4,6 @@ This site is collections of documents created by Tadashi Nemoto(tadashi0713).
 
 Have a good read!
 
-## [Dockerワークショップ](/docker-workshop-ja/01_overview)
+## [Dockerワークショップ](/docker-workshop-ja)
 
 [Dockerドキュメント](https://docs.docker.com/get-started/workshop/) で提供されているワークショップを日本語訳したものです。
