--- a/pages/docker-workshop-ja/07_multi_container.mdx
+++ b/pages/docker-workshop-ja/07_multi_container.mdx
@@ -1,3 +1,5 @@
+import { Tabs } from 'nextra/components'
+
 Up to this point, you've been working with single container apps. But, now you will add MySQL to the
 application stack. The following question often arises - "Where will MySQL run? Install it in the same
 container or run it separately?" In general, each container should do one thing and do it well. The following are a few reasons to run the container separately:
