--- a/pages/docker-workshop-ja/10_what_next.mdx
+++ b/pages/docker-workshop-ja/10_what_next.mdx
@@ -32,13 +32,17 @@ Docker recommends watching the video workshop from DockerCon 2022. Watch the ent
 * [Connect a DB and set up a bind mount](https://youtu.be/gAGEar5HQoU?t=6305)
 * [Deploy a container to the cloud](https://youtu.be/gAGEar5HQoU?t=8280)
 
-{/* <iframe src="https://www.youtube-nocookie.com/embed/gAGEar5HQoU" style="max-width: 100%; aspect-ratio: 16 / 9;" width="560" height="auto" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> */}
+<iframe
+  src="https://www.youtube-nocookie.com/embed/gAGEar5HQoU"
+/>
 
 ## Creating a container from scratch
 
 If you'd like to see how containers are built from scratch, Liz Rice from Aqua Security has a fantastic talk in which she creates a container from scratch in Go. While the talk does not go into networking, using images for the filesystem, and other advanced topics, it gives a deep dive into how things are working.
 
-{/* <iframe src="https://www.youtube-nocookie.com/embed/8fi7uSYlOdc" style="max-width: 100%; aspect-ratio: 16 / 9;" width="560" height="auto" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> */}
+<iframe
+  src="https://www.youtube-nocookie.com/embed/8fi7uSYlOdc"
+/>
 
 ## Language-specific guides
 
