--- a/pages/docker-workshop-ja/index.mdx
+++ b/pages/docker-workshop-ja/index.mdx
@@ -8,7 +8,7 @@ This 45-minute workshop contains step-by-step instructions on how to get started
 > [!NOTE]
 >
 > For a quick introduction to Docker and the benefits of containerizing your
-> applications, see [Getting started](/get-started/introduction/_index.md).
+> applications, see [Getting started](https://docs.docker.com/get-started/introduction).
 
 ## What is a container?
 
