--- a/pages/docker-workshop-ja/02_our_app.mdx
+++ b/pages/docker-workshop-ja/02_our_app.mdx
@@ -1,3 +1,4 @@
+import Image from 'next/image'
 import { Tabs } from 'nextra/components'
 
 For the rest of this guide, you'll be working with a simple todo
@@ -6,7 +7,7 @@ don't worry. This guide doesn't require any prior experience with JavaScript.
 
 ## Prerequisites
 
-- You have installed the latest version of [Docker Desktop](/get-started/get-docker.md).
+- You have installed the latest version of [Docker Desktop](https://docs.docker.com/get-started/get-docker).
 - You have installed a [Git client](https://git-scm.com/downloads).
 - You have an IDE or a text editor to edit files. Docker recommends using [Visual Studio Code](https://code.visualstudio.com/).
 
@@ -145,8 +146,7 @@ Now that you have an image, you can run the application in a container using the
 2. After a few seconds, open your web browser to [http://localhost:3000](http://localhost:3000).
    You should see your app.
 
-   {/* ![Empty todo list](images/todo-list-empty.webp) */}
-   
+   <Image src="/docker-workshop-ja/todo-list-empty.webp" alt="Empty todo list" width="1160" height="226" />
 
 3. Add an item or two and see that it works as you expect. You can mark items as complete and remove them. Your frontend is successfully storing items in the backend.
 
@@ -171,7 +171,7 @@ If you take a quick look at your containers, you should see at least one contain
   <Tabs.Tab>
    In Docker Desktop, select the **Containers** tab to see a list of your containers.
 
-   {/* ![Docker Desktop with get-started container running](images/dashboard-two-containers.webp) */}
+   <Image src="/docker-workshop-ja/dashboard-two-containers.webp" alt="Empty todo list" width="1274" height="724" />
   </Tabs.Tab>
 </Tabs>
 
