--- a/pages/docker-workshop-ja/09_image_best.mdx
+++ b/pages/docker-workshop-ja/09_image_best.mdx
@@ -190,8 +190,8 @@ into an nginx container.
 In this section, you learned a few image building best practices, including layer caching and multi-stage builds.
 
 Related information:
- - [Dockerfile reference](/reference/dockerfile/)
- - [Dockerfile best practices](/manuals/build/building/best-practices.md)
+ - [Dockerfile reference](https://docs.docker.com/reference/dockerfile/)
+ - [Dockerfile best practices](https://docs.docker.com/manuals/build/building/best-practices)
 
 ## Next steps
 
