--- a/pages/docker-workshop-ja/02_our_app.mdx
+++ b/pages/docker-workshop-ja/02_our_app.mdx
@@ -7,7 +7,7 @@ don't worry. This guide doesn't require any prior experience with JavaScript.
 
 ## Prerequisites
 
-- You have installed the latest version of [Docker Desktop](https://docs.docker.com/get-started/get-docker).
+- You have installed the latest version of [Docker Desktop](https://docs.docker.com/get-started/get-docker/).
 - You have installed a [Git client](https://git-scm.com/downloads).
 - You have an IDE or a text editor to edit files. Docker recommends using [Visual Studio Code](https://code.visualstudio.com/).
 
@@ -181,8 +181,8 @@ In this section, you learned the basics about creating a Dockerfile to build an 
 
 Related information:
 
- - [Dockerfile reference](/reference/dockerfile/)
- - [docker CLI reference](/reference/cli/docker/)
+ - [Dockerfile reference](https://docs.docker.com/reference/dockerfile/)
+ - [docker CLI reference](https://docs.docker.com/reference/cli/docker/)
 
 ## Next steps
 
