--- a/pages/docker-workshop-ja/03_updating_app.mdx
+++ b/pages/docker-workshop-ja/03_updating_app.mdx
@@ -1,6 +1,6 @@
 import { Tabs } from 'nextra/components'
 
-In [part 2](./02_our_app.md), you containerized a todo application. In this part, you'll update the application and image. You'll also learn how to stop and remove a container.
+In [part 2](./02_our_app), you containerized a todo application. In this part, you'll update the application and image. You'll also learn how to stop and remove a container.
 
 ## Update the source code
 
@@ -89,7 +89,7 @@ To remove a container, you first need to stop it. Once it has stopped, you can r
 In this section, you learned how to update and rebuild a container, as well as how to stop and remove a container.
 
 Related information:
- - [docker CLI reference](/reference/cli/docker/)
+ - [docker CLI reference](https://docs.docker.com/reference/cli/docker/)
 
 ## Next steps
 
