--- a/pages/docker-workshop-ja/08_using_compose.mdx
+++ b/pages/docker-workshop-ja/08_using_compose.mdx
@@ -1,4 +1,4 @@
-[Docker Compose](/manuals/compose/_index.md) is a tool that helps you define and
+[Docker Compose](https://docs.docker.com/manuals/compose/) is a tool that helps you define and
 share multi-container applications. With Compose, you can create a YAML file to define the services
 and with a single command, you can spin everything up or tear it all down.
 
@@ -24,7 +24,7 @@ In the `getting-started-app` directory, create a file named `compose.yaml`.
 
 ## Define the app service
 
-In [part 7](./07_multi_container.md), you used the following command to start the application service.
+In [part 7](./07_multi_container), you used the following command to start the application service.
 
 ```console
 $ docker run -dp 127.0.0.1:3000:3000 \
@@ -269,9 +269,9 @@ In this section, you learned about Docker Compose and how it helps you simplify
 the way you define and share multi-service applications.
 
 Related information:
- - [Compose overview](/manuals/compose/_index.md)
- - [Compose file reference](/reference/compose-file/_index.md)
- - [Compose CLI reference](/reference/cli/docker/compose/_index.md)
+ - [Compose overview](https://docs.docker.com/manuals/compose/)
+ - [Compose file reference](https://docs.docker.com/reference/compose-file/)
+ - [Compose CLI reference](https://docs.docker.com/reference/cli/docker/compose/)
 
 ## Next steps
 
