--- a/pages/docker-workshop-ja/02_our_app.mdx
+++ b/pages/docker-workshop-ja/02_our_app.mdx
@@ -1,27 +1,25 @@
 import Image from 'next/image'
 import { Tabs } from 'nextra/components'
 
-For the rest of this guide, you'll be working with a simple todo
-list manager that runs on Node.js. If you're not familiar with Node.js,
-don't worry. This guide doesn't require any prior experience with JavaScript.
+このガイドの残りの部分では、Node.js で動作するシンプルなタスク管理アプリを使って作業を進めます。Node.js に詳しくない場合でも心配いりません。このガイドでは、JavaScript の事前知識は必要ありません。
 
-## Prerequisites
+## 前提条件
 
-- You have installed the latest version of [Docker Desktop](https://docs.docker.com/get-started/get-docker/).
-- You have installed a [Git client](https://git-scm.com/downloads).
-- You have an IDE or a text editor to edit files. Docker recommends using [Visual Studio Code](https://code.visualstudio.com/).
+- 最新バージョンの [Docker Desktop](https://docs.docker.com/get-started/get-docker/) をインストールしている。
+- [Git クライアント](https://git-scm.com/downloads) をインストールしている。
+- ファイルを編集するためのIDEまたはテキストエディタを用意している。Dockerは [Visual Studio Code](https://code.visualstudio.com/) の使用を推奨しています。
 
-## Get the app
+## アプリを取得する
 
-Before you can run the application, you need to get the application source code onto your machine.
+アプリケーションを実行する前に、アプリケーションのソースコードをマシンに取得する必要があります。
 
-1. Clone the [getting-started-app repository](https://github.com/docker/getting-started-app/tree/main) using the following command:
+1. 次のコマンドを使用して、[getting-started-appリポジトリ](https://github.com/docker/getting-started-app/tree/main) をクローンします。
 
    ```console
    $ git clone https://github.com/docker/getting-started-app.git
    ```
 
-2. View the contents of the cloned repository. You should see the following files and sub-directories.
+2. クローンしたリポジトリの内容を確認します。以下のようなファイルやサブディレクトリが表示されるはずです。
 
    ```text
    ├── getting-started-app/
@@ -33,53 +31,53 @@ Before you can run the application, you need to get the application source code 
    │ └── yarn.lock
    ```
 
-## Build the app's image
+## アプリのイメージをビルドする
 
-To build the image, you'll need to use a Dockerfile. A Dockerfile is simply a text-based file with no file extension that contains a script of instructions. Docker uses this script to build a container image.
+イメージをビルドするには、Dockerfileを使用します。Dockerfileは、スクリプト形式の指示を含む拡張子のないテキストベースのファイルです。Dockerはこのスクリプトを使ってコンテナイメージをビルドします。
 
-1. In the `getting-started-app` directory, the same location as the `package.json` file, create a file named `Dockerfile`. You can use the following commands to create a Dockerfile based on your operating system.
+1. `getting-started-app` ディレクトリ（`package.json` ファイルと同じ場所）に移動し、`Dockerfile` という名前のファイルを作成します。使用しているOSに応じて、以下のコマンドを使用して `Dockerfile` を作成します。
 
 <Tabs items={['Mac / Linux / Windows (Git Bash)', 'Windows (Command Prompt)', 'Windows (PowerShell)']}>
   <Tabs.Tab>
-   In the terminal, run the following commands.
+   ターミナルで以下のコマンドを実行します。
 
-   Make sure you're in the `getting-started-app` directory. Replace `/path/to/getting-started-app` with the path to your `getting-started-app` directory.
+   `getting-started-app` ディレクトリにいることを確認してください。`/path/to/getting-started-app` を、`getting-started-app` ディレクトリへのパスに置き換えてください。
 
    ```console
    $ cd /path/to/getting-started-app
    ```
 
-   Create an empty file named `Dockerfile`.
+   空の `Dockerfile` を作成します。
 
    ```console
    $ touch Dockerfile
    ```
   </Tabs.Tab>
   <Tabs.Tab>
-   In the Windows Command Prompt, run the following commands.
+   Windowsのコマンドプロンプトで、以下のコマンドを実行します。
 
-   Make sure you're in the `getting-started-app` directory. Replace `\path\to\getting-started-app` with the path to your `getting-started-app` directory.
+   `getting-started-app` ディレクトリにいることを確認してください。`\path\to\getting-started-app` を、`getting-started-app` ディレクトリへのパスに置き換えてください。
 
    ```console
    $ cd \path\to\getting-started-app
    ```
 
-   Create an empty file named `Dockerfile`.
+   空の `Dockerfile` を作成します。
 
    ```console
    $ type nul > Dockerfile
    ```
   </Tabs.Tab>
   <Tabs.Tab>
-   In PowerShell, run the following commands.
+   PowerShellで、以下のコマンドを実行します。
 
-   Make sure you're in the `getting-started-app` directory. Replace `\path\to\getting-started-app` with the path to your `getting-started-app` directory.
+   `getting-started-app` ディレクトリにいることを確認してください。`\path\to\getting-started-app` を、`getting-started-app` ディレクトリへのパスに置き換えてください。
 
    ```console
    $ cd \path\to\getting-started-app
    ```
 
-   Create an empty file named `Dockerfile`.
+   空の `Dockerfile` を作成します。
 
    ```powershell
    $ New-Item -Path . -Name Dockerfile -ItemType File
@@ -87,7 +85,7 @@ To build the image, you'll need to use a Dockerfile. A Dockerfile is simply a te
   </Tabs.Tab>
 </Tabs>
 
-2. Using a text editor or code editor, add the following contents to the Dockerfile:
+2. テキストエディタやコードエディタを使用して、Dockerfileに次の内容を追加します。
 
    ```dockerfile
    # syntax=docker/dockerfile:1
@@ -100,41 +98,38 @@ To build the image, you'll need to use a Dockerfile. A Dockerfile is simply a te
    EXPOSE 3000
    ```
 
-3. Build the image using the following commands:
+3. 以下のコマンドを使用してイメージをビルドします。
 
-   In the terminal, make sure you're in the `getting-started-app` directory. Replace `/path/to/getting-started-app` with the path to your `getting-started-app` directory.
+   ターミナルで、`getting-started-app` ディレクトリにいることを確認してください。`/path/to/getting-started-app` を、`getting-started-app` ディレクトリへのパスに置き換えてください。
 
    ```console
    $ cd /path/to/getting-started-app
    ```
 
-   Build the image.
+   イメージをビルドします。
    ```console
    $ docker build -t getting-started .
    ```
 
-   The `docker build` command uses the Dockerfile to build a new image. You might have noticed that Docker downloaded a lot of "layers". This is because you instructed the builder that you wanted to start from the `node:18-alpine` image. But, since you didn't have that on your machine, Docker needed to download the image.
+   `docker build` コマンドは、Dockerfileを使用して新しいイメージをビルドします。`node:18-alpine` イメージを指定したため、Dockerはそのイメージをダウンロードする必要がありました。
 
-   After Docker downloaded the image, the instructions from the Dockerfile copied in your application and used `yarn` to install your application's dependencies. The `CMD` directive specifies the default command to run when starting a container from this image.
+   イメージがダウンロードされた後、Dockerfileの指示に従ってアプリケーションをコピーし、`yarn` を使ってアプリケーションの依存関係をインストールしました。`CMD` ディレクティブは、このイメージからコンテナを起動するときのデフォルトコマンドを指定します。
 
-   Finally, the `-t` flag tags your image. Think of this as a human-readable name for the final image. Since you named the image `getting-started`, you can refer to that image when you run a container.
+   最後に、`-t` フラグはイメージにタグを付けます。これは、最終イメージの人間が読める名前だと思ってください。イメージに `getting-started` という名前を付けたため、このイメージを使ってコンテナを実行できます。
 
-   The `.` at the end of the `docker build` command tells Docker that it should look for the `Dockerfile` in the current directory.
+   `docker build` コマンドの最後の `.` は、現在のディレクトリにある `Dockerfile` を使用するようにDockerに指示しています。
 
-## Start an app container
+## アプリコンテナを起動する
 
-Now that you have an image, you can run the application in a container using the `docker run` command.
+イメージを作成したので、`docker run` コマンドを使ってコンテナ内でアプリケーションを実行できます。
 
-1. Run your container using the `docker run` command and specify the name of the image you just created:
+1. 作成したイメージの名前を指定して、`docker run` コマンドを使用してコンテナを実行します。
 
    ```console
    $ docker run -dp 127.0.0.1:3000:3000 getting-started
    ```
-
-   The `-d` flag (short for `--detach`) runs the container in the background.
-   This means that Docker starts your container and returns you to the terminal
-   prompt. You can verify that a container is running by viewing it in Docker
-   Dashboard under **Containers**, or by running `docker ps` in the terminal.
+   
+   `-d` フラグ（`--detach` の省略形）は、コンテナをバックグラウンドで実行します。これにより、Dockerはコンテナを起動し、すぐにターミナルに戻ります。コンテナが実行されているかどうかは、Docker ダッシュボードの **Containers** タブで確認するか、ターミナルで `docker ps` を実行して確認できます。
 
    The `-p` flag (short for `--publish`) creates a port mapping between the host
    and the container. The `-p` flag takes a string value in the format of
@@ -143,33 +138,33 @@ Now that you have an image, you can run the application in a container using the
    `127.0.0.1:3000` (`localhost:3000`) on the host. Without the port mapping,
    you wouldn't be able to access the application from the host.
 
-2. After a few seconds, open your web browser to [http://localhost:3000](http://localhost:3000).
-   You should see your app.
+   `-p` フラグ（`--publish` の省略形）は、ホストとコンテナ間のポートマッピングを作成します。コマンドは、コンテナのポート3000をホストの `127.0.0.1:3000` (`localhost:3000`) に公開します。
+
+2. 数秒後に、ウェブブラウザで http://localhost:3000 にアクセスします。アプリが表示されるはずです。
 
    <Image src="/docker-workshop-ja/todo-list-empty.webp" alt="Empty todo list" width="1160" height="226" />
 
-3. Add an item or two and see that it works as you expect. You can mark items as complete and remove them. Your frontend is successfully storing items in the backend.
+3. アイテムを1つか2つ追加し、期待通りに動作するか確認してください。アイテムを完了としてマークしたり、削除したりできます。フロントエンドは、正常にバックエンドにアイテムを保存しています。
 
+この時点で、いくつかのアイテムを含むタスク管理アプリが実行されています。
 
-At this point, you have a running todo list manager with a few items.
-
-If you take a quick look at your containers, you should see at least one container running that's using the `getting-started` image and on port `3000`. To see your containers, you can use the CLI or Docker Desktop's graphical interface.
+CLIやDocker Desktopを使ってコンテナを確認すると、少なくとも1つのコンテナが `getting-started` イメージを使用し、ポート `3000` で実行されているはずです。CLIまたはDocker Desktopのグラフィカルインターフェースを使用してコンテナを確認できます。
 
 <Tabs items={['CLI', 'Docker Desktop']}>
   <Tabs.Tab>
-   Run the following `docker ps` command in a terminal to list your containers.
+   ターミナルで `docker ps` コマンドを実行して、コンテナの一覧を表示します。
 
    ```console
    $ docker ps
    ```
-   Output similar to the following should appear.
+   以下のような出力が表示されるはずです。
    ```console
    CONTAINER ID        IMAGE               COMMAND                  CREATED             STATUS              PORTS                      NAMES
    df784548666d        getting-started     "docker-entrypoint.s…"   2 minutes ago       Up 2 minutes        127.0.0.1:3000->3000/tcp   priceless_mcclintock
    ```
   </Tabs.Tab>
   <Tabs.Tab>
-   In Docker Desktop, select the **Containers** tab to see a list of your containers.
+   Docker Desktopで、**Containers** タブを選択してコンテナのリストを表示します。
 
    <Image src="/docker-workshop-ja/dashboard-two-containers.webp" alt="Empty todo list" width="1274" height="724" />
   </Tabs.Tab>
@@ -177,13 +172,13 @@ If you take a quick look at your containers, you should see at least one contain
 
 ## Summary
 
-In this section, you learned the basics about creating a Dockerfile to build an image. Once you built an image, you started a container and saw the running app.
+このセクションでは、Dockerfileを作成してイメージをビルドする基本的な手順を学びました。イメージをビルドした後、コンテナを起動し、アプリが動作していることを確認しました。
 
 Related information:
 
- - [Dockerfile reference](https://docs.docker.com/reference/dockerfile/)
- - [docker CLI reference](https://docs.docker.com/reference/cli/docker/)
+ - [Dockerfileリファレンス](https://docs.docker.com/reference/dockerfile/)
+ - [docker CLIリファレンス](https://docs.docker.com/reference/cli/docker/)
 
-## Next steps
+## 次のステップ
 
-Next, you're going to make a modification to your app and learn how to update your running application with a new image. Along the way, you'll learn a few other useful commands.
+次に、アプリを変更し、新しいイメージで実行中のアプリケーションを更新する方法を学びます。その過程で、いくつかの便利なコマンドについても学びます。
